--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -19,7 +19,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_margin="5dp"
+        android:fontFamily="@font/monomaniacine"
         android:gravity="center"
         android:paddingTop="30dp"
         android:text="Login"
@@ -31,10 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="Local de login"
+        android:padding="15dp"
         android:textColorHint="#0E0909"
         app:boxBackgroundColor="#FFF8DE"
         app:boxBackgroundMode="outline"
-        android:padding="15dp"
+        app:startIconDrawable="@drawable/baseline_mail"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -44,16 +46,17 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite seu e-mail">
+            android:hint="Digite seu e-mail" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/baseline_vpn_key"
         android:contentDescription="Local de login"
-        android:textColorHint="#0E0909"
         android:padding="15dp"
+        android:textColorHint="#0E0909"
         app:boxBackgroundColor="#FFF8DE"
         app:boxBackgroundMode="outline"
         app:boxCornerRadiusBottomEnd="20dp"
@@ -65,9 +68,25 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite seu e-mail">
+            android:hint="Digite sua senha" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="255dp"
+        android:padding="10dp"
+        android:text="Esqueceu sua senha?" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Entrar"
+        android:textColor="#FFF8DE"
+        android:backgroundTint="#5CA853"/>
+
 
 
 </LinearLayout>
