--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -13,12 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/logo" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
         android:fontFamily="@font/monomaniacine"
         android:gravity="center"
@@ -36,12 +37,12 @@
         android:textColorHint="#0E0909"
         app:boxBackgroundColor="#FFF8DE"
         app:boxBackgroundMode="outline"
-        app:startIconDrawable="@drawable/baseline_mail"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
-        app:counterMaxLength="100">
+        app:counterMaxLength="100"
+        app:startIconDrawable="@drawable/baseline_mail">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -53,7 +54,6 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/baseline_vpn_key"
         android:contentDescription="Local de login"
         android:padding="15dp"
         android:textColorHint="#0E0909"
@@ -63,7 +63,8 @@
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
-        app:counterMaxLength="100">
+        app:counterMaxLength="100"
+        app:startIconDrawable="@drawable/baseline_vpn_key">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -73,20 +74,28 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="255dp"
-        android:padding="10dp"
+        android:layout_gravity="end"
+        android:padding="5dp"
         android:text="Esqueceu sua senha?" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:padding="5dp"
+        android:text="Não tem conta? Cadastre-se" />
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:backgroundTint="#5CA853"
         android:text="Entrar"
-        android:textColor="#FFF8DE"
-        android:backgroundTint="#5CA853"/>
-
+        android:layout_marginTop="30dp"
+        android:textColor="#FFF8DE" />
 
 
 </LinearLayout>
